# rxigemm

./: README.md
may_sparse/: rc_matrix.cu  rc_matrix2.cu  rd.copy.cu  rd_debug.cu  rd_matrix.cu  test  test1
may_sparse/CUDA-INT8-GEMM-main/: gemm_i8.cuh  test  test_gemm_i8.cu
may_sparse/gemm_test/MatmulTutorial-main/examples/matmul/cublas/: call_cublas.cu  cublas
may_sparse/gemm_test/MatmulTutorial-main/examples/matmul/this-sm80/: main-int8.cu  main.cu  matmul-int8.cu  matmul-v01.cu  matmul-v11.cu  matmul-v12.cu
may_sparse/xicnn/: cnn.py  xicnn.cu
may_sparse/xigemm_cuda/matrix/: CMakeLists.txt  gen_matrix.cu  gen_matrix.cuh
may_sparse/xigemm_cuda/matrix/cublas/: cublas_lib.cuh
may_sparse/xigemm_cuda/matrix/test/: cublas_lib_test.cu  help_func.cu  operator_matrix_test.cu
xigemm_cpu/: CMakeLists copy.txt  CMakeLists.txt
xigemm_cpu/src/matrix/: blas_eigen.hpp  operator_matrix.hpp  rcxigemm.hpp  util.h
xigemm_cpu/src/test/: rcxigemm_test.cpp
xigemm_cuda/: CMakeLists.txt  run_matrix.cu
xigemm_cuda/matrix/: operator_matrix.cu  operator_matrix.cuh  print_matrix.cu  print_matrix.cuh
xigemm_cuda/matrix/test/: CMakeLists.txt
